1999-09-20  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-propertybox.c (gnome_property_box_init): Make
	(gnome_property_box_init): Set the `OK' button as the default one,
	and do not set it insensitive anymore.
	(set_sensitive): Do not change sensitivity of the `OK' button
	anymore.
	(dialog_clicked_cb): Check the dirty flag for the current page.
	If the page is not dirty, just close instead of applying and
	closing: this makes sure the old behavior is preserved even if now
	OK is no longer insensitive when the page is not dirty.

1999-09-20  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas-rect-ellipse.c (gnome_canvas_re_unrealize): Set the
	gc fields to NULL after unrefing them.  Thanks to Damon Chaplin
	for pointing this out.

	* gnome-canvas-text.c (gnome_canvas_text_unrealize): Likewise.

	* gnome-canvas-polygon.c (gnome_canvas_polygon_unrealize): Likewise.

	* gnome-canvas-line.c (gnome_canvas_line_unrealize): Likewise.

	* gnome-canvas-image.c (gnome_canvas_image_unrealize): Likewise.

1999-09-19  Owen Taylor  <otaylor@redhat.com>

	* gnome-dock-band.c: Don't size-allocate non-visible
	children, since we don't size-request them. This will
	avoid problems with warnings since otherwise we
	will allocating the children with junk allocations.

1999-09-20  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-appbar.c (gnome_appbar_construct): Put alignment back in
	so that the label is still left-aligned.

1999-09-19  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-appbar.c (gnome_appbar_construct): Set horizontal usize on
	the label to 1, so that it does not stupidly change size when the
	text is larger than the available space.

1999-09-19  Havoc Pennington  <hp@pobox.com>

	* gnome-animator.c (prepare_aux_pixmaps): only create pixmaps
	if we are realized
	(size_allocate): Don't do the gdk_window_clear_area() calls
	unless we are realized
	(paint): Create backing store here if necessary... bad hack,
	need realize/unrealize eventually
